# fivews

./: Cargo.toml  README.md
fivews_server/: Cargo.toml
fivews_server/lidb/: log0.lidb
fivews_server/src/: lib.rs  models.rs  paths.rs
fivews_server/tests/: tests.rs
fivewsdb/: README.md
fivewsdb/src/: db.rs  entry.rs  init.rs  lib.rs  wal.rs
fivewsdb/tests/: db_test.rs
server/: Cargo.toml  README.md
server/src/: models.rs  paths.rs
server/tests/: tests.rs
src/: db.rs  entry.rs  lib.rs  wal.rs
tests/: db_test.rs
