[package]
name = "fivews_server"
version = "0.1.0"
authors = ["Ingi Thor Sigurdsson <ingisigurds@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fivewsdb = { path = "../fivewsdb" }
warp = "0.2.5"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

# TODO: Use dirs 
# dirs = "3.0.1"