[package]
name = "server"
version = "0.1.0"
authors = ["Ingi Thor Sigurdsson <ingisigurds@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.1"
fivewsdb = { path = "../fivewsdb" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2.5"

# TODO: Use dirs 
# dirs = "3.0.1"